--- a/index.html
+++ b/index.html
@@ -10,106 +10,53 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#productos">Productos</a></li>
-                <li><a href="#carrito">Carrito</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="SobreNosotros.html">Sobre Nosotros</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="inicio" class="section">
-        <h1>Bienvenidos a Perfumería Susi</h1>
-        <div class="carousel-container">
-            <div class="carousel">
-                <img src="POLO2" alt="Perfume 1" />
-                <img src="POLO1" alt="Perfume 2" />
-                <img src="BOSS 1" alt="Perfume 3" />
-                <img src="BOSS2.png" alt="Perfume 4" />
-                <img src="BOSS CARTERA.webp" alt="Perfume 5" />
-                <img src="BROSS1.webp" alt="Perfume 6" />
-                <img src="BROSS2" alt="Perfume 7" />
-                <img src="BROSS3" alt="Perfume 8" />
-            </div>
-            <!-- Controles del carrusel -->
-            <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-            <button class="next" onclick="moveSlide(1)">&#10095;</button>
-        </div>
-    </section>
+
+        <div id="image-carousel">
+                <img src="LOGO.jfif" alt="Perfume 1" />
+                <img src="LOGO 2.jfif" alt="Perfume 2" />
+            </div>      
+
     
-
-    <section id="productos" class="section">
-        <h1>Productos</h1>
-        <div class="product-list">
-            <!-- Producto 1 -->
-            <div class="product-card">
-                <img src="BOSS 1" alt="Perfume-Boos-intense-blue">
-                <h3>Perfume Boos intense blue</h3>
-                <p>Un perfume suave y fresco para todo el día.</p>
-                <p>Precio: $1000</p>
-                <button onclick="addToCart('Perfume Boos intense blue', 1000)">Agregar al carrito</button>
-            </div>
-            <!-- Producto 2 -->
-            <div class="product-card">
-                <img src="BOSS2.png" alt="Perfume-Boos-IntenseLumiere">
-                <h3>Perfume Boos Intense Lumiere</h3>
-                <p>Un perfume floral para ocasiones especiales.</p>
-                <p>Precio: $1500</p>
-                <button onclick="addToCart('Perfume Boos Intense Lumiere', 1500)">Agregar al carrito</button>
-            </div>
-            <div class="product-card">
-                <img src="BOSS CARTERA.webp" alt="Perfume-Boos-Cartera">
-                <h3>Perfume Boos Cartera</h3>
-                <p>Un perfume floral para ocasiones especiales.</p>
-                <p>Precio: $1500</p>
-                <button onclick="addToCart('Perfume Boos Cartera', 1500)">Agregar al carrito</button>
-            </div>
-            <div class="product-card">
-                <img src="BROSS1.webp" alt="Perfume-Bross-Blue">
-                <h3>Perfume Bross Blue</h3>
-                <p>Un perfume floral para ocasiones especiales.</p>
-                <p>Precio: $1500</p>
-                <button onclick="addToCart('Perfume Bross Blue', 1500)">Agregar al carrito</button>
-            </div>
-            <div class="product-card">
-                <img src="BROSS2" alt="Perfume-bross-classic">
-                <h3>Perfume Bross Classic</h3>
-                <p>Un perfume floral para ocasiones especiales.</p>
-                <p>Precio: $1500</p>
-                <button onclick="addToCart('Perfume Bross Classic', 1500)">Agregar al carrito</button>
-            </div>
-            <div class="product-card">
-                <img src="BROSS3" alt="Perfume-Bross-Warrior">
-                <h3>Perfume Bross Warrior</h3>
-                <p>Un perfume floral para ocasiones especiales.</p>
-                <p>Precio: $1500</p>
-                <button onclick="addToCart('Perfume Bross Warrior', 1500)">Agregar al carrito</button>
-            </div>
-            <div class="product-card">
-                <img src="POLO1" alt="Perfume-Polo-Legend">
-                <h3>Perfume Polo Legend</h3>
-                <p>Un perfume floral para ocasiones especiales.</p>
-                <p>Precio: $1500</p>
-                <button onclick="addToCart('Perfume Polo Legend', 1500)">Agregar al carrito</button>
-            </div>
-            <div class="product-card">
-                <img src="POLO2" alt="Perfume-Polo-Legend-spirit">
-                <h3>Perfume Polo Legend Spirit</h3>
-                <p>Un perfume floral para ocasiones especiales.</p>
-                <p>Precio: $1500</p>
-                <button onclick="addToCart('Perfume Polo Legend Spirit', 1500)">Agregar al carrito</button>
-            </div>
-        </div>
-    </section>
-
-    <section id="carrito" class="section">
-        <h1>Carrito de Compras</h1>
-        <div id="cart-items">
-            <p>Tu carrito está vacío.</p>
-        </div>
-        <button id="checkout-btn">Pagar con Mercado Pago</button>
+    <section class="contact" id="contacto">
+        <h2>Contáctanos</h2>
+        <form class="contact-form">
+            <input type="text" placeholder="Tu Nombre">
+            <input type="email" placeholder="Tu Email">
+            <textarea placeholder="Tu Mensaje"></textarea>
+            <button>Enviar</button>
+        </form>
     </section>
 
     <script src="https://sdk.mercadopago.com/js/v2"></script>
     <script src="script.js"></script>
 </body>
+<footer>
+<!-- Footer -->
+<footer id="footer">
+    <div class="footer-container">
+        <div class="footer-social">
+            <a href="https://www.instagram.com/perfumeria.su" target="_blank">
+                <i class="fab fa-instagram"></i> Síguenos en Instagram <img src="igpalabra.jpeg" alt="">
+            </a>
+        </div>
+        <div class="footer-contact">
+            <p><strong>Direcciones:</strong></p>
+            <p>Sarmiento 1695, Gerli, Avellaneda, Buenos Aires</p>
+            <p>Salta 1694, Gerli, Avellaneda, Buenos Aires</p>
+            <p><strong>Teléfono:</strong> 1168061837</p>
+        </div>
+    </div>
+</footer>
+
+<!-- Font Awesome (para los íconos de redes sociales) -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="a
+
+</footer>
 </html>
