--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     </header>
 
     <!-- Carrusel de imágenes -->
-    <div id="image-carousel">
-        <img src="LOGO.jfif" alt="Perfume 1" />
-        <img src="LOGO 2.jfif" alt="Perfume 2" />
+    <div id="image-carousel" class="carousel">
+        <div class="carousel-slide">
+            <img src="LOGO.jfif" alt="Logo Perfumería Susi 1">
+            <img src="LOGO 2.jfif" alt="Logo Perfumería Susi 2">
+        </div>
     </div>
 
     <!-- Sección de contacto -->
