--- a/productos.html
+++ b/productos.html
@@ -26,13 +26,15 @@
                 <button class="toggle-section">Hombres</button>
                 <div class="product-slider">
                     <div class="product-card">
-                        <h3>Perfume Hombre 1</h3>
-                        <p>Precio: $1500</p>
+                        <h3>Perfume Hombre Boos Intense Blue</h3>
+                        <img src="BOSS 1" alt="">
+                        <p>Precio: $1</p>
                         <button class="buy-btn" data-id="h1">Comprar</button>
                     </div>
                     <div class="product-card">
-                        <h3>Perfume Hombre 2</h3>
-                        <p>Precio: $1600</p>
+                        <h3>Perfume Hombre Bross London Blue</h3>
+                        <img src="BROSS1.webp" alt="">
+                        <p>Precio: $2</p>
                         <button class="buy-btn" data-id="h2">Comprar</button>
                     </div>
                 </div>
@@ -42,8 +44,9 @@
                 <button class="toggle-section">Mujeres</button>
                 <div class="product-slider">
                     <div class="product-card">
-                        <h3>Perfume Mujer 1</h3>
-                        <p>Precio: $1700</p>
+                        <h3>Perfume Mujer Boss Cartera </h3>
+                        <img src="BOSS CARTERA.webp" alt="">
+                        <p>Precio: $1</p>
                         <button class="buy-btn" data-id="m1">Comprar</button>
                     </div>
                     <div class="product-card">
