--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="footer-container">
             <div class="footer-social">
                 <a href="https://www.instagram.com/perfumeria.su" target="_blank">
-                    <i class="fab fa-instagram"></i> Seguinos en Instagram 
+                    <i class="fab fa-instagram"></i> <img src="igpalabra.jpeg" alt="Seguinos en Instagram">
                 </a>
             </div>
             <div class="footer-contact">
@@ -53,6 +53,11 @@
                 <p>Sarmiento 1695, Gerli, Avellaneda, Buenos Aires</p>
                 <p>Salta 1694, Gerli, Avellaneda, Buenos Aires</p>
                 <p><strong>Teléfono:</strong> 1168061837</p>
+            </div>
+            <div class="footer-whatsapp">
+                <a href="https://wa.me/541168061837" target="_blank">
+                    <i class="fab fa-whatsapp"></i> <img src="wp2.jfif" alt="">
+                </a>
             </div>
         </div>
     </footer>
