--- a/index.html
+++ b/index.html
@@ -41,26 +41,30 @@
     <script src="script.js"></script>
 
     <!-- Footer -->
-    <footer id="footer">
-        <div class="footer-container">
-            <div class="footer-social">
-                <a href="https://www.instagram.com/perfumeria.su" target="_blank">
-                    <i class="fab fa-instagram"></i> <img src="igpalabra.jpeg" alt="Seguinos en Instagram">
-                </a>
-            </div>
-            <div class="footer-contact">
-                <p><strong>Direcciones:</strong></p>
-                <p>Sarmiento 1695, Gerli, Avellaneda, Buenos Aires</p>
-                <p>Salta 1694, Gerli, Avellaneda, Buenos Aires</p>
-                <p><strong>Teléfono:</strong> 1168061837</p>
-            </div>
-            <div class="footer-whatsapp">
-                <a href="https://wa.me/541168061837" target="_blank">
-                    <i class="fab fa-whatsapp"></i> <img src="wp2.jfif" alt="">
-                </a>
-            </div>
+    <!-- Footer -->
+<footer id="footer">
+    <div class="footer-container">
+        <div class="footer-social">
+            <a href="https://www.instagram.com/perfumeria.su" target="_blank">
+                <i class="fab fa-instagram"></i> 
+                <img src="igpalabra.jpeg" alt="Seguinos en Instagram" class="responsive-img">
+            </a>
         </div>
-    </footer>
+        <div class="footer-contact">
+            <p><strong>Direcciones:</strong></p>
+            <p>Sarmiento 1695, Gerli, Avellaneda, Buenos Aires</p>
+            <p>Salta 1694, Gerli, Avellaneda, Buenos Aires</p>
+            <p><strong>Teléfono:</strong> 1168061837</p>
+        </div>
+        <div class="footer-whatsapp">
+            <a href="https://wa.me/541168061837" target="_blank">
+                <i class="fab fa-whatsapp"></i>
+                <img src="wp2.jfif" alt="Envíanos un mensaje por WhatsApp" class="responsive-img">
+            </a>
+        </div>
+    </div>
+</footer>
+
 
     <!-- Font Awesome (para los íconos de redes sociales) -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
