--- a/productos.html
+++ b/productos.html
@@ -102,9 +102,10 @@
             <p>Total a pagar: $<span id="total-price"></span></p>
             <button id="checkout-btn">Pagar con Mercado Pago</button> <!-- Solo un botón de pago -->
         </section>
-        <section>
-            <h2>Formulario para envios de compras:</h2>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSccG5KpSJs1kbr3AmXM_55LdSwILR0EJZqoRYgAqFl2c8nKFg/viewform?embedded=true" width="640" height="1354" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        <section class="form-section">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSccG5KpSJs1kbr3AmXM_55LdSwILR0EJZqoRYgAqFl2c8nKFg/viewform?embedded=true" 
+            width="500" 
+            height="900" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
         </section>
     </main>
 
