Actualización de archivos y nuevos documentos agregados

--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -76,8 +76,8 @@
                 <ul>
                     <li><strong>Dirección:</strong> Sarmiento 1695, Gerli, Avellaneda, Buenos Aires</li>
                     <li><strong>Dirección:</strong> Salta 1694, Gerli, Avellaneda, Buenos Aires</li>
-                    <li><strong>Teléfono:</strong> 11 6806 1837</li>
-                    <li><strong>Instagram:</strong> Perfumeria.su</li>
+                    <li><strong>Teléfono:</strong> 123456</li>
+                    <li><strong>Instagram:</strong> Lugar-para-Instagram</li>
                 </ul>
             </div>
         </div>
